@@ -1,9 +1,11 @@
 package com.cbu.backend.studygroup;
 
+import com.cbu.backend.member.MemberService;
 import com.cbu.backend.member.domain.Member;
 import com.cbu.backend.studygroup.dto.StudyGroupRequest;
 import com.cbu.backend.studygroup.dto.StudyGroupResponse;
 
+import com.cbu.backend.util.AuthUtils;
 import lombok.RequiredArgsConstructor;
 
 import org.springframework.data.domain.Pageable;
@@ -11,7 +13,7 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.UUID;
 
 import javax.persistence.EntityNotFoundException;
 
@@ -21,34 +23,48 @@ public class StudyGroupService {
 
     private final StudyGroupRepository studyGroupRepository;
     private final StudyGroupMapper studyGroupMapper;
+    private final MemberService memberService;
 
     public Long saveStudyGroup(StudyGroupRequest studyGroupRequest) {
         checkParticipantDuplicated(studyGroupRequest.getMembers());
-        return studyGroupRepository.save(studyGroupMapper.toEntity(studyGroupRequest)).getId();
+        List<Member> studyMembers =
+                studyGroupRequest.getMembers().stream().map(memberService::findById).toList();
+        Member leader = memberService.findById(studyGroupRequest.getLeader());
+
+        return studyGroupRepository
+                .save(studyGroupMapper.toEntity(studyGroupRequest, leader, studyMembers))
+                .getId();
     }
 
     @Transactional
     public void updateStudyGroup(Long id, StudyGroupRequest studyGroupRequest) {
-        StudyGroup studyGroup = getEntity(id);
         checkParticipantDuplicated(studyGroupRequest.getMembers());
-        studyGroup.updateStudyGroup(
-                studyGroupRequest.getName(), studyGroupRequest.getDescription());
-    }
-
-    @Transactional
-    public void addLike(Long id, Member member) {
         StudyGroup studyGroup = getEntity(id);
-        LikeCount likeCount = new LikeCount(member, studyGroup);
-        likeCount.addLike(studyGroup);
+        List<Member> studyMembers =
+                studyGroupRequest.getMembers().stream().map(memberService::findById).toList();
+        Member leader = memberService.findById(studyGroupRequest.getLeader());
+
+        studyGroup.updateStudyGroup(
+                studyGroupRequest.getName(),
+                studyGroupRequest.getDescription(),
+                leader,
+                studyMembers);
     }
 
     @Transactional
-    public void cancelLike(Long id, Member member) {
-        //        LikeCount likeCount =
-        //                studyGroupRepository
-        //                        .findLikeCountByIdAndMember(id, member)
-        //                        .orElseThrow(EntityNotFoundException::new);
-        //        likeCount.getStudyGroup().cancelLike(likeCount);
+    public void addLike(Long id) {
+        StudyGroup studyGroup = getEntity(id);
+        LikeMember likeMember = new LikeMember(AuthUtils.getLoginUser(), studyGroup);
+        likeMember.addLike();
+    }
+
+    @Transactional
+    public void cancelLike(Long id) {
+        LikeMember likeMember =
+                studyGroupRepository
+                        .findLikeCountByIdAndMember(id, AuthUtils.getLoginUser())
+                        .orElseThrow(EntityNotFoundException::new);
+        likeMember.cancelLike();
     }
 
     @Transactional
@@ -68,16 +84,16 @@ public class StudyGroupService {
     public List<StudyGroupResponse> findAllStudyGroup(Pageable pageable) {
         return studyGroupRepository.findAll(pageable).stream()
                 .map(studyGroupMapper::toResponse)
-                .collect(Collectors.toList());
+                .toList();
     }
 
-    private void checkParticipantDuplicated(List<Long> studyGroupParticipants) {
+    private void checkParticipantDuplicated(List<UUID> studyGroupParticipants) {
         if (studyGroupParticipants.size() != getRequestCount(studyGroupParticipants)) {
             throw new ParticipantDuplicatedException();
         }
     }
 
-    private long getRequestCount(List<Long> studyGroupParticipants) {
+    private long getRequestCount(List<UUID> studyGroupParticipants) {
         return studyGroupParticipants.stream().distinct().count();
     }
 
